# Vectorless-RAG-Project

./: .env  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: config.py  main.py
app/models/: schemas.py
app/routes/: history.py  index.py  query.py  upload.py
app/services/: history_service.py  ingestion_service.py  reasoning_service.py  retrieval_service.py  tree_index_service.py
data/: history.json
data/index_store/: docstore.json  index_store.json  tree.json
data/parsed/: Energy-Gen-AI-technology-framework--A-perspective-of-energy-_2025_Technology.json  Generative-Artificial-Intelligence--GenAI--in-the-research-p_2025_Technology.json  Wave-energy-technology-development-in-Ireland--Employing-the-_2025_Technolog.json
tests/: test_ingestion.py  test_reasoning.py  test_tree_index.py
ui/: streamlit_app.py
utils/: chunk_summarizer.py  logging_utils.py  metadata_extractor.py  pdf_parser.py  prompt_templates.py  section_detector.py  tree_model.py
